# techsprint-2026-team-team-crafting-future

./: README.md
backend/: main.py  manager.py  pyproject.toml
backend/controllers/: ai.py  login.py  news.py
backend/models/: ai.py  auth.py  news.py  report.py
evidex/: README.md  pubspec.yaml
evidex/android/app/: build.gradle.kts
evidex/android/app/src/main/: AndroidManifest.xml
evidex/android/app/src/main/kotlin/com/craftingfuture/evidex/: MainActivity.kt
evidex/ios/Runner/: Info.plist
evidex/ios/Runner.xcodeproj/: project.pbxproj
evidex/lib/: main.dart
evidex/lib/models/: news_model.dart  policy_analysis_model.dart  policy_model.dart
evidex/lib/screens/: analyze_policy_input_screen.dart  analyze_response_screen.dart  analyze_screen.dart  floating_bottom_nav.dart  home_screen.dart  login_page.dart  ngo_complete_profile_page.dart  policy_silumation_screen.dart  political_complete_profile_page.dart  signup_page.dart  simulator_screen.dart  stats_map_screen.dart
evidex/lib/services/: analyze_api_service.dart  news_api_service.dart  policy_api_service.dart
evidex/linux/: CMakeLists.txt
evidex/linux/runner/: my_application.cc
evidex/macos/Runner.xcodeproj/: project.pbxproj
evidex/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
evidex/macos/Runner/Configs/: AppInfo.xcconfig
evidex/test/: widget_test.dart
evidex/web/: index.html  manifest.json
evidex/windows/: CMakeLists.txt
evidex/windows/runner/: Runner.rc  main.cpp
