[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "jsonwebtoken>=1.0.0",
    "jwt>=1.4.0",
    "langchain>=1.2.3",
    "langchain-google-genai>=4.1.3",
    "pydantic>=2.12.5",
    "pyjwt>=2.10.1",
    "pymongo>=4.16.0",
    "uvicorn>=0.40.0",
]
